Down to no full gc and max 134ms pause when running akka-actor-tests locally now