@@ -139,19 +139,18 @@ object AkkaBuild {
       val defaults = Seq(
         // ## core memory settings
         "-XX:+UseG1GC",
-        "-Xms2g", "-Xmx2g",
-        // increate stack size (todo why?)
+        // most tests actually don't really use _that_ much memory (>1g usually)
+        // twice used (and then some) keeps G1GC happy - very few or to no full gcs
+        "-Xms3g", "-Xmx3g",
+        // increase stack size (todo why?)
         "-Xss2m",
 
         // ## extra memory/gc tuning
-        // make sure we actually allocate physical memory (todo is it really worth it?)
-        "-XX:+AlwaysPreTouch",
-        // not sure why we disable this (todo motivate)
-        "-XX:-UseBiasedLocking",
         // this breaks jstat, but could avoid costly syncs to disc see http://www.evanjones.ca/jvm-mmap-pause.html
         "-XX:+PerfDisableSharedMem",
-        // tell G1GC that we would be really happy if all GC pauses could be kept low and not cause test timeouts
-        "-XX:MaxGCPauseMillis=200",
+        // tell G1GC that we would be really happy if all GC pauses could be kept below this as higher would
+        // likely start causing test failures in timing tests
+        "-XX:MaxGCPauseMillis=300",
         // nio direct memory limit (todo why this value?)
         "-XX:MaxDirectMemorySize=256m",
 
